--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@
                 document.getElementById('game-text').innerHTML += '<br><input type="text" id="destination" placeholder="Your Destination"> <button onclick="confirmDestination()">Submit</button>';
                 gameState = 4;
             } else if (gameState === 4) {
+                document.getElementById('game-text').innerText = 'Ahmed: Would you like me to open the sofa bed for you, mate?';
+                document.getElementById('game-text').innerHTML += '<br><button onclick="openSofaBed()">Yes, please!</button> <button onclick="noThanksSofaBed()">No, thanks</button>';
+                gameState = 5;
+            } else if (gameState === 5) {
                 document.getElementById('game-text').innerText = 'Congratulations! You have successfully checked in. Ahmed will assist you with your luggage. Enjoy your stay!';
                 document.getElementById('game-text').innerHTML += '<br><button onclick="playAgain()">Play Again</button>';
-                gameState = 5;
+                gameState = 6;
             }
         }
 
@@ -102,14 +106,32 @@
         function noHelp() {
             document.getElementById('game-text').innerText = 'Ahmed: No worries, mate! If you need any assistance later, feel free to ask. Enjoy your stay!';
             document.getElementById('game-text').innerHTML += '<br><button onclick="playAgain()">Play Again</button>';
-            gameState = 5;
+            gameState = 6;
         }
 
         function confirmDestination() {
             let destination = document.getElementById('destination').value;
-            document.getElementById('game-text').innerText = `Ahmed: All right, mate! I'll arrange a cab for you to ${destination}. Enjoy your stay at Danubius Hotel!`;
+            document.getElementById('game-text').innerText = `Ahmed: All right, mate! I'll arrange a cab for you to ${destination}.`;
             document.getElementById('game-text').innerHTML += '<br><button onclick="playAgain()">Play Again</button>';
             gameState = 5;
+        }
+
+                function openSofaBed() {
+            document.getElementById('game-text').innerText = 'Ahmed: All right, mate! I'll be happy to open the sofa bed for you. Enjoy the extra comfort!';
+            document.getElementById('game-text').innerHTML += '<br><button onclick="enjoyStay()">Continue</button>';
+            gameState = 6;
+        }
+
+        function noThanksSofaBed() {
+            document.getElementById('game-text').innerText = 'Ahmed: No worries, mate! If you change your mind, feel free to ask. Enjoy your stay!';
+            document.getElementById('game-text').innerHTML += '<br><button onclick="enjoyStay()">Continue</button>';
+            gameState = 6;
+        }
+
+        function enjoyStay() {
+            document.getElementById('game-text').innerText = 'Diego: If you have any further requests or questions during your stay, feel free to reach out. Enjoy your time at Danubius Hotel!';
+            document.getElementById('game-text').innerHTML += '<br><button onclick="playAgain()">Play Again</button>';
+            gameState = 7;
         }
 
         function playAgain() {
@@ -121,3 +143,4 @@
     </script>
 </body>
 </html>
+
